--- a/attendance_manage_stm32/attendance_manage_stm32.ioc
+++ b/attendance_manage_stm32/attendance_manage_stm32.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL;lcd_Task,-3,128,Start_lcd_Task,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -112,7 +112,7 @@ ProjectManager.ProjectName=attendance_manage_stm32
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
+ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
