--- a/attendance_manage_stm32/attendance_manage_stm32.ioc
+++ b/attendance_manage_stm32/attendance_manage_stm32.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL;lcd_Task,-3,128,Start_lcd_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL;lcd_Task,-3,128,Start_lcd_Task,Default,NULL,Dynamic,NULL,NULL;rfid_Task,-3,128,Start_rfid_Task,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
