--- a/attendance_manage_stm32/attendance_manage_stm32.ioc
+++ b/attendance_manage_stm32/attendance_manage_stm32.ioc
@@ -11,25 +11,27 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PF0
 Mcu.Pin1=PF1
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_FREERTOS_VS_ENABLE
-Mcu.Pin13=VP_SYS_VS_tim6
+Mcu.Pin10=PD9
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=VP_FREERTOS_VS_ENABLE
+Mcu.Pin14=VP_SYS_VS_tim6
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PD8
-Mcu.Pin9=PD9
-Mcu.PinsNb=14
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PD8
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -53,7 +55,12 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=Buzzer
+PA3.Locked=true
+PA3.Signal=S_TIM2_CH4
+PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=RFID_SDA
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
@@ -113,7 +120,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -154,12 +161,19 @@ RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CalculateBaudRate=5.625 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation4 CH4
+TIM2.Period=500-1
+TIM2.Prescaler=180-1
+TIM2.Pulse-PWM\ Generation4\ CH4=450-1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
