--- a/attendance_manage_stm32/attendance_manage_stm32.ioc
+++ b/attendance_manage_stm32/attendance_manage_stm32.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL;lcd_Task,-3,128,Start_lcd_Task,Default,NULL,Dynamic,NULL,NULL;rfid_Task,-3,128,Start_rfid_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;uart_rx_Task,-3,128,Start_uart_rx_Task,Default,NULL,Dynamic,NULL,NULL;lcd_Task,-3,128,Start_lcd_Task,Default,NULL,Dynamic,NULL,NULL;rfid_Task,-3,128,Start_rfid_Task,Default,NULL,Dynamic,NULL,NULL;inout_Task,-3,128,Start_inout_Task,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -21,7 +21,7 @@ Mcu.Pin1=PF1
 Mcu.Pin10=PD9
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
-Mcu.Pin13=VP_FREERTOS_VS_ENABLE
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin14=VP_SYS_VS_tim6
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
@@ -35,22 +35,22 @@ Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
-MxCube.Version=4.27.0
-MxDb.Version=DB.4.0.270
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
+MxCube.Version=5.2.1
+MxDb.Version=DB.5.0.21
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
-NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -78,7 +78,7 @@ PCC.PartNumber=STM32F429ZITx
 PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
-PCC.Vdd=null
+PCC.Vdd=3.3
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
@@ -103,7 +103,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F429ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -176,8 +176,8 @@ TIM2.Prescaler=180-1
 TIM2.Pulse-PWM\ Generation4\ CH4=450-1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
-VP_FREERTOS_VS_ENABLE.Mode=Enabled
-VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
